tigergraph-server/3.10/installation/upgrade.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade)[Next](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
  *     * [TigerGraph DB Release Notes](https://docs.tigergraph.com/tigergraph-server/3.10/release-notes/)
  *     * [Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/)
      * Installation
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/docker)
        * [On Kubernetes](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/kubernetes)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/gcp)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/linux)
          * [System Requirements](https://docs.tigergraph.com/tigergraph-server/3.10/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/3.10/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/3.10/installation/post-install-check)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.10/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/3.10/installation/change-port)
        * [Change IP or Hostname](https://docs.tigergraph.com/tigergraph-server/3.10/installation/change-ip-or-hostname)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.10/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/using-a-remote-gsql-client)
        * [GSQL Shell (Web)](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/web)
    * [Create Database](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/database-definition)
      * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/multigraph-overview)
  *     * [Load Data](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/data-loading-overview)
      * [Externalize Kafka Configs](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/externalizing-kafka-configs)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-local-files)
      * [Load from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-cloud)
      * [Load from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-warehouse)
      * [Load from External Kafka](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-kafka)
        * [Avro Data Validation through KafkaConnect](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/avro-validation-with-kafka)
        * [Kafka SSL Security Guide](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/kafka-ssl-security-guide)
      * [Load from Spark Dataframe](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-spark-dataframe)
        * [Spark Connection Via JDBC Driver (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/spark-connection-via-jdbc-driver)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/manage-data-source)
      * [Stream from External Kafka (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/data-streaming-connector/kafka)
  *     * Advanced Topics
      * [System Management](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-with-gadmin)
        * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/memory-management)
        * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/workload-management)
        * [Metrics Reporting](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/system-metrics)
        * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands)
        * [Change Data Capture (CDC) Overview](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-overview)
          * [CDC Setup](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-setup)
          * [CDC Message Examples](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-message-example)
          * [CDC State Monitoring](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-state-monitoring)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/ldap)
          * [OIDC JWT Authentication](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/jwt-token)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/user-management)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/role-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/access-control-model)
          * [Access Control Lists (ACLs)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/acl-management)
          * [Row Policy Overview (Preview Feature)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/row-policy-overview)
            * [Key Concepts](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/rbac-row-policy)
            * [Set Up Row Policy](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/setup-row-policy)
          * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/vlac)
      * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/)
        * [Database Import/Export All Graphs](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/database-import-export)
        * [Import/Export Individual Graphs](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/single-graph-import-export)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/backup-cluster)
        * [Restore a Database Backup from the Same Cluster](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/restore-backup-same)
        * [Restore a Database Backup from Another Cluster](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/cross-cluster-backup)
        * [Differential Backup](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/differential-backups)
        * [Online Backup](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/online-backup)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/gbar-legacy)
      * [Cluster and HA Management](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/)
        * Cluster Resizing
          * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/expand-a-cluster)
          * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/shrink-a-cluster)
          * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/repartition-a-cluster)
          * [Cluster Replace](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
        * [Cross-Region Replication (CRR)](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/crr-index)
          * [Set up CRR](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/set-up-crr)
          * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/fail-over)
          * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/troubleshooting)
          * [CRR FAQ](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/crr-faq)
        * [High Availability (HA)](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-overview)
          * [Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-cluster)
          * [GSQL Server Support](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-for-gsql-server)
          * [Application Server Support](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-for-application-server)
          * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/cluster-commands)
          * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/remove-failed-node)
      * [Architecture](https://docs.tigergraph.com/tigergraph-server/3.10/intro/internal-architecture)
        * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/multigraph-overview)
        * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.10/intro/transaction-and-acid)
        * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/continuous-availability-overview)
      * [Kubernetes](https://docs.tigergraph.com/tigergraph-server/3.10/kubernetes/)
        * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/3.10/kubernetes/k8s-operator/)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.10/security/)
      * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/3.10/security/audit-privileged-actions)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.10/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.10/security/encrypting-data-at-rest)
      * [File Input Policy](https://docs.tigergraph.com/tigergraph-server/3.10/security/gsql-file-input-policy)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.10/security/file-output-policy)
      * [Configuring Login Protection](https://docs.tigergraph.com/tigergraph-server/3.10/security/login-protection)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.10/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.10/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.10/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.10/API/json-catalog)
      * [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/3.10/API/upsert-rest)
  *     * Additional Resources
      * [Best Practices](https://docs.tigergraph.com/tigergraph-server/3.10/additional-resources/best-practice-guides/best-practices-overview)
        * [Scaling Guide](https://docs.tigergraph.com/tigergraph-server/3.10/additional-resources/best-practice-guides/best-prac-scaling-clusters)
      * Troubleshooting and FAQs
        * [Knowledge base and FAQs](https://kb.tigergraph.com/)
        * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/troubleshooting-guide)
        * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/system-administration-faqs)
        * [Log Files](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/log-files)
          * [Audit Logs](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/audit-log)
          * [Gathering Log Information with gcollect](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/gcollect)
          * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/elk-filebeat)
      * References
        * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.10/reference/configuration-parameters)
        * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.10/reference/return-codes)
        * [Object-Based Privilege Tables](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/row-policy-privileges-table)
        * [List of Legacy Privilege Syntax](https://docs.tigergraph.com/tigergraph-server/3.10/reference/list-of-privileges)
        * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.10/reference/ports)
        * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.10/reference/glossary)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.10/reference/patents-and-third-party-software)
        * [Legacy Version Documentation](https://docs.tigergraph.com/tigergraph-server/3.10/additional-resources/legacy-tg-versions)
        * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.10/intro/comparison-of-editions)
        * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.10/intro/release-process)
        * [RBAC Row Policy EBNF](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/row-policy-ebnf)


TigerGraph DB 3.10
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
  * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/)
  * Installation
  * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.10/modules/installation/pages/upgrade.adoc)
### Contents
  * [Before you begin](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_before_you_begin)
  * [Check release notes for changes in functionality](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_check_release_notes_for_changes_in_functionality)
  * [Make a Backup](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_make_a_backup)
  * [Prepare a pre-3.2 database](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_prepare_a_pre_3_2_database)
  * [Ensure that the database is inactive](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_ensure_that_the_database_is_inactive)
  * [Upgrading a CRR system](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_a_crr_system)
  * [Upgrading from v3.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-from-v3x)
  * [n/N option](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_nn_option)
  * [y/Y Option](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_yy_option)
  * [Option -n](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_option_n)
  * [Upgrading from v2.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-from-v2x)
  * [Upgrading Cloud Marketplace Images](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-cloud-marketplace-image)
  * [Upgrading from 3.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_from_3_x)
  * [Upgrading from 2.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_from_2_x)
  * [Known Issues and Workarounds](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_known_issues_and_workarounds)
  * [to_string() is Now a Built-in Function:](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_to_string_is_now_a_built_in_function)
  * [tg_ is Now a Reserved Keyword](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_tg_is_now_a_reserved_keyword)
  * [UDF File Policy](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_udf_file_policy)
  * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_file_output_policy)
  * [Other issues](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_other_issues)


# Upgrading an Existing Installation
Table of Contents
  * [Before you begin](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_before_you_begin)
    * [Check release notes for changes in functionality](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_check_release_notes_for_changes_in_functionality)
    * [Make a Backup](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_make_a_backup)
    * [Prepare a pre-3.2 database](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_prepare_a_pre_3_2_database)
    * [Ensure that the database is inactive](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_ensure_that_the_database_is_inactive)
  * [Upgrading a CRR system](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_a_crr_system)
  * [Upgrading from v3.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-from-v3x)
    * [n/N option](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_nn_option)
    * [y/Y Option](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_yy_option)
    * [Option `-n`](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_option_n)
  * [Upgrading from v2.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-from-v2x)
  * [Upgrading Cloud Marketplace Images](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-cloud-marketplace-image)
    * [Upgrading from 3.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_from_3_x)
    * [Upgrading from 2.x](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_from_2_x)
  * [Known Issues and Workarounds](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_known_issues_and_workarounds)
    * [`to_string()` is Now a Built-in Function:](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_to_string_is_now_a_built_in_function)
    * [`tg_` is Now a Reserved Keyword](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_tg_is_now_a_reserved_keyword)
    * [UDF File Policy](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_udf_file_policy)
    * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_file_output_policy)
    * [Other issues](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_other_issues)


## [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_before_you_begin)Before you begin
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_check_release_notes_for_changes_in_functionality)Check release notes for changes in functionality
Always check the [TigerGraph DB Release Notes](https://docs.tigergraph.com/tigergraph-server/3.10/release-notes/) for all the versions between your current version and your target version, for deprecated features, known issues, new reserved words, or other behavioral changes. You may need to make migration changes to your TigerGraph application either before or after the upgrade. For example, change the name of schema elements and refactor queries if a new reserved word was introduced. If you have any questions or uncertainty, please contact TigerGraph Support.  
---  
#### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_user_defined_function_udf_compatibility)User-defined function (UDF) compatibility
TigerGraph version 3.9 introduced changes in the way user-defined functions are accepted by the system.
  * Some UDFs may no longer be accepted due to [increased security screening](https://docs.tigergraph.com/tigergraph-server/3.10/security/#_udf_file_scanning).
  * UDFs may no longer be called `to_string()`. This is now a built-in GSQL function.
  * UDF names may no longer use the `tg_` prefix.


If any UDFs do not satisfy these restrictions, then they will not be installed. GSQL will return these errors:
Reserved `tg_` prefix error
```
The following function name(s) contain errors:
 [reserved 'tg_']: tg_myFunction
Please rename the corresponding functions in: ExprFunctions.hpp
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Reserved `to_string()` function name
```
Following GSQL built-in function name(s): [to_string] can not be used again for user defined function name(s)!
GSQL built-in functions are case-insensitive. Please rename corresponding user defined functions in ExprFunctions.hpp.
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Any user-defined function previously used in an older TigerGraph version that does not comply with these requirements must be renamed or removed in `ExprFunctions.hpp`.
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_make_a_backup)Make a Backup
As a precaution, it is always a good idea to make a full backup before performing a major system change like an upgrade. System upgrade does not support version rollback at this time.  
---  
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_prepare_a_pre_3_2_database)Prepare a pre-3.2 database
  1. First perform a backup [using GBAR (Graph Backup and Restore)](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/) on your existing installation.
  2. **Restore** your installation with GBAR to rebuild it. This step is necessary because TigerGraph 3.2 made major changes to the Graph Storage Engine and a restore is needed to remove certain files that would make the upgrade operation fail.
  3. Ensure that the restore is completely finished and there are no pending graph modifications (schema change, insert, update, or delete) before starting the upgrade. You can do this by calling the [/rebuildnow](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_rebuild_graph_engine) endpoint and waiting until there are no more PullDelta messages being printed in the logs.


### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_ensure_that_the_database_is_inactive)Ensure that the database is inactive
Ensure that the database will be inactive throughout the upgrade process.   
---  
  1. Stop any new database requests.
  2. Ensure that all previous operations such as queries, loading jobs, schema changes, and data updates and deletions are completely finished. Check the appropriate logs. Call the [/rebuildnow](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_rebuild_graph_engine) endpoint to force the data store to consume all pending updates and then wait until there are no more PullDelta messages being printed in the logs.


## [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_a_crr_system)Upgrading a CRR system
To upgrade the TigerGraph software on a CRR system, follow this sequence of steps.
  1. Disable CRR on your DR cluster.
```
$ gadmin config set System.CrossRegionReplication.Enabled false
$ gadmin config apply -y
$ gadmin restart all -y
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  2. Upgrade both the primary cluster and DR cluster, according to the instructions on this page.
  3. Enable CRR on the DR cluster.


## [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-from-v3x)Upgrading from v3.x
When switching to a new version of TigerGraph it will stop the current services which will make the cluster temporarily unavailable.  
---  
Any 3.x version of TigerGraph can be upgraded to another v3.x version by running the installation script with the upgrade(`-U`) flag.
  1. Download the latest version of TigerGraph to your system.
  2. Extract the tar file.
  3. Run the installation script under the Linux user created during installation with the upgrade flag (`-U`) that was extracted from the tar file:


```
$ ./install.sh -U
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Please upgrade from the most recent maintenance version in any minor release. If you are upgrading from a version that does not have the most recent patches applied to its minor version, upgrade to the most recent patches first before upgrading to another minor or major version. For example, if you are upgrading from 3.5.0 to 3.10.x, upgrade to 3.5.3 first using the installation script and then upgrade to 3.10.x. Additionally, versions upgrading from 3.0 or 3.1 must first go through 3.2.4. For example, if you are running version 3.1.3, you must first upgrade to 3.1.6, then 3.2.4, then to 3.10.x.  
---  
Once binaries and config files are installed on local machine and also distributed to all the other machines, a message will be prompted to user:
```
“Do you want to switch platform to the new version now(it can be delayed to a later time): y/N”.
```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_nn_option)n/N option
If users selects `n/N`, now it is listing a list of scripts taking the same parameters as `gadmin/gsql` commands.
Ex.
```
[NOTE  ]: To switch platform to new version, please follow the instructions:
1. pre_upgrade_check_infra.sh 3.6.5 3.10.0
2. pre_upgrade_check_engine.sh 3.6.5 3.10.0
3. pre_upgrade_check_gsql.sh 3.6.5 3.10.0
4. pre_upgrade_check_gus.sh 3.6.5 3.10.0
5. gadmin config set System.AppRoot /home/graphsql/tigergraph/app/3.10.0
6. gadmin config apply -y
7. switch_version_infra.sh 3.6.5 3.10.0
8. switch_version_engine.sh 3.6.5 3.10.0
9. switch_version_gsql.sh 3.6.5 3.10.0
10. switch_version_gus.sh 3.6.5 3.10.0
11. post_upgrade_check_infra.sh 3.6.5 3.10.0
12. post_upgrade_check_engine.sh 3.6.5 3.10.0
13. post_upgrade_check_gsql.sh 3.6.5 3.10.0
14. post_upgrade_check_gus.sh 3.6.5 3.10.0
```

These scripts are located in `“/home/<user>/tigergraph/app/<version>/upgrade_script` folder.
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_yy_option)y/Y Option
If users selects `y/Y` the installer will automatically switch TigerGraph to the latest version.
A new message will prompt to user, saying TigerGraph has been upgraded.
If there’s any error, the upgrade process will be terminated immediately. Following the instructions in the prompts from the console, the user can tell the progress of the upgrade and manually re-run the failed and the leftover steps to complete the upgrading process.
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_option_n)Option `-n`
Users can use option `-n` to avoid input `y/n` to switch to the new version. When it is given, the upgrade flow will switch to the new version automatically without input from the user.
```
$ ./install.sh -U -n
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Example:
```
./install.sh -U -n
  _______         ______         __
 /_ __(_)___ ____ _____/ ____/________ _____ / /_
  / / / / __ `/ _ \/ ___/ / __/ ___/ __ `/ __ \/ __ \
 / / / / /_/ / __/ / / /_/ / / / /_/ / /_/ / / / /
 /_/ /_/\__, /\___/_/  \____/_/  \__,_/ .___/_/ /_/
    /____/             /_/

Welcome to the TigerGraph platform installer!
[PROGRESS]: 20:02:38 Upgrade TigerGraph platform from existing one ...
[NOTE  ]: Obtained version of exist platform: 3.10.0 [OK]
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-from-v2x)Upgrading from v2.x
Please contact TigerGraph Support to coordinate upgrading to TigerGraph version 3.10 if you are currently using a 2.x version of TigerGraph. Even though all the steps are documented, it is strongly recommended that you review the process with the TigerGraph Support team.
Upgrading the Developer Edition or migrating to another edition are not supported.
For detailed upgrade procedures, see our support article on the [2.6.x to 3.x upgrade flow](https://tigergraph.zendesk.com/hc/en-us/articles/8173584319892-2-6-x-to-3-x-upgrade-flow)
## [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#upgrading-cloud-marketplace-image)Upgrading Cloud Marketplace Images
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_from_3_x)Upgrading from 3.x
  1. [Back up](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/gbar-legacy) your TigerGraph instance using GBAR.
  2. Start a new instance from the latest cloud marketplace listing.
  3. Use the backup files you generated earlier to [restore](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/gbar-legacy) the new instance.


### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_upgrading_from_2_x)Upgrading from 2.x
If you want to upgrade your Cloud Marketplace image from v2.x on any cloud platform, please [open a support ticket](https://tigergraph.zendesk.com/hc/en-us/). for instructions and assistance.
## [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_known_issues_and_workarounds)Known Issues and Workarounds
Several things may have changed between your current release and 3.9.x and these steps should help to upgrade the UDF file before starting the upgrade process or prepare users to address anything that may come up as a result of the upgrade.
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_to_string_is_now_a_built_in_function)`to_string()` is Now a Built-in Function:
In previous releases, `to_string()` was included in the default `ExprFunctions` file and is a common utility function added to the `ExprFunctions` file.
#### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_what_to_do)What to do:
Users need to rename or remove UDFs that are called `to_string()`. Now, that it is added as a built-in function users are no longer needing to include it in the `ExprFunctions` file.
For more reference on how to prepare for an upgrade please refer back to the section: [Before You Begin](https://docs.tigergraph.com/tigergraph-server/4.2/installation/upgrade#_before_you_begin).
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_tg_is_now_a_reserved_keyword)`tg_` is Now a Reserved Keyword
TigerGraph uses the `tg_` prefix to denote functions provided by TigerGraph.
#### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_what_to_do_2)What to do:
Users can either rename, remove, or comment out any functions in their `ExprFunctions` file that contain this prefix. Additionally, users should avoid prefixing future functions with this reserved prefix. This is to avoid naming collisions with queries.
For more reference on how to prepare for an upgrade please refer back to the section: [Before You Begin](https://docs.tigergraph.com/tigergraph-server/4.2/installation/upgrade#_before_you_begin).
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_udf_file_policy)UDF File Policy
There is some UDF enforcement taking place. The UDF files are scanned to make sure they comply with the file policy. This is to ensure there are none of the following:
  1. **Macros with a`replacement`.**
Example:
```
#define TABLE_SIZE 100
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Notice the macro without `replacement` is allowed
```
#define EXPRFUNCTIONS_HPP_
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  2. **`Headers`and`Includes` from potentially vulnerable C++ features**
If the header file is not included in our default `allowlist`, users can, at their own discretion, add C++ headers to an `allowlist`. Users are free to edit the `allowlist` via `gadmin` config set `GSQL.UDF.Policy.HeaderAllowlist`.
Additionally, users can also disable a file policy after an upgrade with this command:
```
gadmin config set GSQL.UDF.Policy.Enable false
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

This is so the restrictions will not take effect.


#### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_what_to_do_3)What to do:
It is recommended that users consult with the entire policy and adjust the UDF files to comply with the file policy.
For more reference please see: [UDF File Scanning](https://docs.tigergraph.com/tigergraph-server/current/security/#_udf_file_scanning).
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_file_output_policy)File Output Policy
GSQL restricts where a query can produce output to files through a file output policy. Sometimes users can encounter a issue with this policy after an upgrade.
#### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_what_to_do_4)What to do:
Before (recommended) or after an upgrade users should change or use different constant paths for queries and loading jobs that do **not** violate policy.
For more on file policy see [File Output Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/file-output-policy) and/or [File Input Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/gsql-file-input-policy).
### [](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade#_other_issues)Other issues
For any other issues encountered please contact support@tigergraph.com.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


